# LisaDbg

./: Cargo.toml  README.md
src/: cli.rs  log.rs  main.rs  process.rs  ste.rs  usage.rs  utils.rs
src/command/: attach.rs  breakpoint.rs  file.rs  hook.rs  load.rs  mod.rs  proc_addr.rs  remover.rs  reset.rs  set.rs  skip.rs  stret.rs  sym.rs  viewing.rs  watchpoint.rs
src/command/def/: func.rs  mod.rs  structs.rs
src/dbg/: attach.rs  exec.rs  handle_breakpoint.rs  handle_point.rs  hook.rs  memory.rs  mod.rs
src/dbg/dbg_cmd/: deref_mem.rs  disasm.rs  info_reg.rs  mod.rs  usages.rs
src/dbg/dbg_cmd/mode_32/: deref_mem32.rs  disasm.rs  info_reg.rs  mod.rs
src/dbg/dbg_cmd/mode_32/modifier32/: mod.rs  register.rs  set_mem.rs
src/dbg/dbg_cmd/modifier/: mod.rs  register.rs  set_memory.rs
src/dbg/dbg_cmd/x32/: deref_mem32.rs  disasm.rs  info_reg.rs  mod.rs
src/dbg/dbg_cmd/x32/modifier32/: register.rs  set_mem.rs
src/dbg/dbg_cmd/x64/: info_reg.rs  mod.rs
src/dbg/dbg_cmd/x64/modifier/: register.rs
src/dbg/memory/: breakpoint.rs  deref_mem.rs  finder.rs  func.rs  mem_info.rs  mod.rs  set_memory.rs  stack.rs  watchpoint.rs
src/dbg/memory/set/: mod.rs  set_memory.rs  set_protect.rs  thread.rs
src/pefile/: function.rs  mod.rs  section.rs
src/symbol/: dwarf.rs  mod.rs  pdb.rs
symbol_pe/: CMakeLists.txt  CMakePresets.json  symbol_pe.cpp  symbol_pe.h
symbol_pe/src/: parser.cpp  symbol_pe.h
symbol_pe/src/class/: parse_static.cpp  static_parse.h
