[package]
name = "LisaDbg"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = "0.3.26"
once_cell = "1.19.0"
libloading = "0.8.5"
num = "0.4.3"
gimli = "0.31.0"
regex = "1.10.6"
iced-x86 = "1.21.0"
anyhow = "1.0.89"
winapi = { version = "0.3.9", features = ["ntdef", "memoryapi", "winnt", "handleapi", "fileapi", "processthreadsapi",
    "debugapi", "dbghelp", "libloaderapi", "synchapi", "psapi", "tlhelp32", "heapapi"] }
keystone-engine = { version = "0.1.0", features = ["build-from-src"] }